2003-12-01  Pierre Humblet <pierre.humblet@ieee.org>

	* shared.cc (shared_name): Take into account the SE_CREATE_GLOBAL_NAME
	privilege when building the name string.
	(open_shared): Remove the call to OpenFileMapping.
	(shared_info::initialize): Move cygheap initialization to ...   
	(memory_init): ... here. Suppress now useless shared_h variable.
	(user_shared_initialize): Make tu a cygpsid.

2003-12-01  Dr. Volker Zell  <Dr.Volker.Zell@oracle.com>

	* include/tzfile.h: Remove duplicate definition of TM_SUNDAY.
	* localtime.cc: Point TZDIR to the /usr/share/zoneinfo directory used
	by the tzcode package.

2003-11-30  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc: Renamed from flock.c.

2003-11-29  Christopher Faylor  <cgf@redhat.com>

	* pinfo.h: Remove global_sigs declaration.
	* siginfo.h: Move global_sigs declaration here.
	* Makefile.in: Remove duplicate compiler flag.

2003-11-29  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (_threadinfo::pop): Zero *contents* of popped stack
	location rather than the actual stack pointer.

2003-11-29  Nicholas Wourms  <nwourms@netscape.net>

	* Makefile.in: (DLL_OFILES): Add flock.o.
	* cygwin.din: Export flock.
	* flock.c: New file.
	* include/sys/file.h: Include sys/cdefs.h.
	Add function prototype for flock().
	Add some comments from BSD's header for further clarity.
	(L_SET, L_CURR, L_INCR, L_XTND): Redefine as the macros
	SEEK_SET, SEEK_CUR, SEEK_CUR, & SEEK_END respectively.
	(LOCK_SH,LOCK_EX,LOCK_NB,LOCK_UN): New macros for flock().
	* include/cygwin/version.h: Bump API minor number.

2003-11-28  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (no_signals_available): Fix so that non-zero exit state is
	a true condition rather than errnoneously only checking other states
	when exist_state was zero.

2003-11-28  Christopher Faylor  <cgf@redhat.com>

	* pinfo.h (_pinfo::getthread2signal): Remove obsolete function.
	* cygtls.h (_threadinfo): Define tid more precisely.