@@ -1,3 +1,9 @@
+2003-12-01  Corinna Vinschen  <corinna@vinschen.de>
+
+	* cygheap.cc (cygheap_init): Set cygheap->shared_prefix.
+	* cygheap.h (struct init_cygheap): Add shared_prefix.
+	* shared.cc (shared_name): Use cygheap->shared_prefix.
+
 2003-12-01  Pierre Humblet <pierre.humblet@ieee.org>
 
 	* shared.cc (shared_name): Take into account the SE_CREATE_GLOBAL_NAME
